[RED] Modify service test